# Pulse

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
.scratch/pulse/: spec.md
.scratch/pulse/issues/: 01-scaffolding-ci-health.md  02-auth-core-rls-sessions.md  (+12 more)
backend/: .dockerignore  Dockerfile  Procfile  alembic.ini  pyproject.toml
backend/app/: accounts.py  alerts.py  celery_app.py  checks.py  config.py  db.py  db_sync.py  deps.py  email.py  health.py  logging.py  main.py  models.py  plans.py  ratelimit.py  redis.py  security.py  seed.py  sessions.py  tasks.py  tokens.py
backend/app/auth/: oauth.py  routes.py
backend/app/billing/: routes.py
backend/app/incidents/: engine.py  routes.py
backend/app/monitors/: routes.py
backend/app/status/: routes.py
backend/app/teams/: routes.py
backend/app/webhooks/: routes.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  0002_invites.py  0003_monitors.py  0004_check_results.py  0005_incidents.py  0006_webhooks.py  0007_billing.py
backend/tests/: conftest.py  helpers.py  test_alerts.py  test_auth.py  test_billing.py  test_checks.py  test_health.py  test_incidents.py  test_limits.py  test_monitors.py  test_oauth_upsert.py  test_password_reset.py  test_scheduler.py  test_seed.py  test_status_page.py  test_tcp_ping.py  test_teams.py
docs/agents/: issue-tracker.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: screenshots.mjs
frontend/src/: App.tsx  index.css  main.tsx
(+27 files in other folders)
