[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-backend"
version = "0.1.0"
description = "Pulse — multi-tenant uptime monitoring API + workers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "redis>=5.2",
    "celery>=5.4",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "stripe>=15.3.1",
    "slowapi>=0.1.10",
    "sentry-sdk[fastapi]>=2.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom calls these in argument defaults by design.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "app.deps.team_role",
    "app.deps.require_role",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
